test/compile-fail/lexer/utf8-in-input.rs
// FIXME: Remove this line
รถ //! ERROR(2:1): unexpected token: `รถ`, expected a symbol